--- a/preview.html
+++ b/preview.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vue Play</title>
-  <link href="./css/app.d147df45.css" rel="stylesheet"></head>
+  </head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="./js/app.4aad5615.js"></script></body>
+  <script type="text/javascript" src="./js/preview.20c775e2.js"></script></body>
 </html>
